--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap" rel="stylesheet">
 <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+<script src="https://kit.fontawesome.com/5fb6efb628.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
@@ -44,6 +45,7 @@
             Generate meaningful discussions with your audience and build strong,
             loyal community. Think of the insightful conversations you miss out
             on with a feedback form.
+          
           </p>
         </div>
         <div class="sec-right">
@@ -99,9 +101,9 @@
          <a href="#">Contact Us</a>
        </div>
        <div class="social links">
-         <a href="https://web.facebook.com/mycyberpreacher">F</a>
-         <a href="https://twitter.com/iamdrmeka">T</a>
-         <a href="#">I</a>
+         <a href="https://web.facebook.com/mycyberpreacher"><i class="fa-brands fa-facebook-f"></i></a>
+         <a href="https://twitter.com/iamdrmeka"><i class="fa-brands fa-twitter"></i></a>
+         <a href="#"><i class="fa-brands fa-instagram"></i></a>
        </div>
  
      </div>
